updated header and hall of fame

--- a/hall-of-fame/index.html
+++ b/hall-of-fame/index.html
@@ -21,6 +21,7 @@
             </nav>
         </div>
     </header>
+
     <main>
         <section class="hero">
             <div class="hero-content">
@@ -31,6 +32,14 @@
 
         <section class="features">
             <div class="cards-grid">
+                <div class="card">
+                    <h3>🎉 SoloDevelopment Game Jam 6</h3>
+                    <p>From <a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam">Winter Jam</a></p>
+                    <ul>
+                        <li><a href="https://drahmen.itch.io/operation-mc-codename-melting-point">Operation MC: Codename Melting Point</a> by @drahmen</li>
+                    </ul>
+                </div>
+
                 <div class="card">
                     <h3>🎉 SoloDevelopment Game Jam 5</h3>
                     <p>From <a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam">Spooky Jam</a></p>
@@ -45,7 +54,7 @@
                     <h3>🎉 SoloDevelopment Game Jam 4</h3>
                     <p>From <a href="https://itch.io/jam/solo-dev-game-jam-4">Solodev Jam #4</a></p>
                     <ul>
-                        <li><a href="https://blackvoidmedia.itch.io/mutual-assured-destruction-simulator">Mutual Assured Destruction Simulator</a> by @blackvoidtytan</li>
+                        <li><a href="https://blackvoidmedia.itch.io/mutual-assured-destrtruction-simulator">Mutual Assured Destruction Simulator</a> by @blackvoidtytan</li>
                         <li><a href="https://gripgrap.itch.io/dodge-the-question">Dodge the Question</a> by @gripgrap</li>
                         <li><a href="https://yikag.itch.io/six-rolls-six">Six Rolls Six</a> by @yikag</li>
                     </ul>
@@ -59,7 +68,45 @@
                     </ul>
                 </div>
 
-                <!-- Continue with other winners -->
+                <div class="card">
+                    <h3>❄️ Winter Jam</h3>
+                    <p>From <a href="https://itch.io/jam/winter-jam-by-solodevelopment">Winter Jam</a></p>
+                    <ul>
+                        <li><a href="https://uppastgamer.itch.io/track-master">Track Master</a> by @ensom_</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>🏆 Second Marathon Jam</h3>
+                    <p>From <a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment">Marathon Jam 2</a></p>
+                    <ul>
+                        <li><a href="https://fernandolv3.itch.io/scavengersfromplanetx">Scavengers from Planet X</a> by @fernandolv3</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>🎃 Halloween Jam</h3>
+                    <p>From <a href="https://itch.io/jam/halloween-jam-2021">Halloween Jam 2021</a></p>
+                    <ul>
+                        <li><a href="https://blackvoidmedia.itch.io/i-came-home-tonight">I Came Home Tonight</a> by @blackvoidtytan and @radagast08</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>🏆 First Marathon Jam</h3>
+                    <p>From <a href="https://itch.io/jam/marathon-jam-by-solodevelopment">Marathon Jam 1</a></p>
+                    <ul>
+                        <li><a href="https://razzie-dev.itch.io/df-fbla">DF FBLA</a> by @lonelylily</li>
+                    </ul>
+                </div>
+
+                <div class="card">
+                    <h3>🏆 First r/SoloDevelopment Jam</h3>
+                    <p>From <a href="https://itch.io/jam/solodevelopment-game-jam">First Jam</a></p>
+                    <ul>
+                        <li><a href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world">There's Something Wrong With This World</a> by @blackvoidtytan</li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
