--- a/events/index.html
+++ b/events/index.html
@@ -1,26 +1,18 @@
+---
+layout: default
+title: Home
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Game jams and events for solo developers">
-    <title>Events - SoloDevelopment</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="A community for solo game developers">
+    <title>{{ site.title }} - {{ page.title }}</title>
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <h1 class="site-title">SoloDevelopment.org</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/events/">Events</a></li>
-                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
-                    <li><a href="/hall-of-fame/">Hall of Fame</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    {% include header.html %}
     <main>
         <section class="hero">
             <div class="hero-content">
