--- a/hall-of-fame/index.html
+++ b/hall-of-fame/index.html
@@ -1,149 +1,97 @@
 ---
 layout: default
 title: Hall of Fame
+description: Celebrating outstanding solo developer projects
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Celebrating outstanding solo developer projects">
-    <title>Hall of Fame - SoloDevelopment</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-    <header>
-        <div class="header-content">
-            <h1 class="site-title">SoloDevelopment.org</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/events/">Events</a></li>
-                    <li><a href="/hall-of-fame/">Hall of Fame</a></li>
-                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
-                </ul>
-            </nav>
+{% include header.html %}
+
+<main>
+    <section class="hero">
+        <div class="hero-content">
+            <h2>🏅 Hall of Fame 🏅</h2>
+            <p>Celebrating the amazing solo developers who have showcased their talent in our game jams!</p>
         </div>
-    </header>
+    </section>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>🏅 Hall of Fame 🏅</h2>
-                <p>Celebrating the amazing solo developers who have showcased their talent in our game jams!</p>
-            </div>
-        </section>
-
-        <section class="features">
-            <div class="cards-grid">
-                <div class="card">
-                    <h3>🎉 SoloDevelopment Game Jam 6</h3>
-                    <p>From <a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam">Winter Jam</a></p>
-                    <ul>
-                        <li><a href="https://drahmen.itch.io/operation-mc-codename-melting-point">Operation MC: Codename Melting Point</a> by @drahmen</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>🎉 SoloDevelopment Game Jam 5</h3>
-                    <p>From <a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam">Spooky Jam</a></p>
-                    <ul>
-                        <li><a href="https://drahmen.itch.io/guardian-of-the-grave">Guardian of the Grave</a> by @drahmen</li>
-                        <li><a href="https://emceetheguy.itch.io/hanktheimp">Hank The Imp</a> by @Emcee</li>
-                        <li><a href="https://log64.itch.io/maybel-in-the-hazy-hotel">Maybel in the Hazy Hotel</a> by @log64</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>🎉 SoloDevelopment Game Jam 4</h3>
-                    <p>From <a href="https://itch.io/jam/solo-dev-game-jam-4">Solodev Jam #4</a></p>
-                    <ul>
-                        <li><a href="https://blackvoidmedia.itch.io/mutual-assured-destrtruction-simulator">Mutual Assured Destruction Simulator</a> by @blackvoidtytan</li>
-                        <li><a href="https://gripgrap.itch.io/dodge-the-question">Dodge the Question</a> by @gripgrap</li>
-                        <li><a href="https://yikag.itch.io/six-rolls-six">Six Rolls Six</a> by @yikag</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>🏆 Third Marathon Jam</h3>
-                    <p>From <a href="https://itch.io/jam/marathon-jam-3-by-solodevelopment">Marathon Jam 3</a></p>
-                    <ul>
-                        <li><a href="https://blackvoidmedia.itch.io/out-here-alone">Out Here Alone</a> by @blackvoidtytan</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>❄️ Winter Jam</h3>
-                    <p>From <a href="https://itch.io/jam/winter-jam-by-solodevelopment">Winter Jam</a></p>
-                    <ul>
-                        <li><a href="https://uppastgamer.itch.io/track-master">Track Master</a> by @ensom_</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>🏆 Second Marathon Jam</h3>
-                    <p>From <a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment">Marathon Jam 2</a></p>
-                    <ul>
-                        <li><a href="https://fernandolv3.itch.io/scavengersfromplanetx">Scavengers from Planet X</a> by @fernandolv3</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>🎃 Halloween Jam</h3>
-                    <p>From <a href="https://itch.io/jam/halloween-jam-2021">Halloween Jam 2021</a></p>
-                    <ul>
-                        <li><a href="https://blackvoidmedia.itch.io/i-came-home-tonight">I Came Home Tonight</a> by @blackvoidtytan and @radagast08</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>🏆 First Marathon Jam</h3>
-                    <p>From <a href="https://itch.io/jam/marathon-jam-by-solodevelopment">Marathon Jam 1</a></p>
-                    <ul>
-                        <li><a href="https://razzie-dev.itch.io/df-fbla">DF FBLA</a> by @lonelylily</li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>🏆 First r/SoloDevelopment Jam</h3>
-                    <p>From <a href="https://itch.io/jam/solodevelopment-game-jam">First Jam</a></p>
-                    <ul>
-                        <li><a href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world">There's Something Wrong With This World</a> by @blackvoidtytan</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h4>Community</h4>
+    <section class="features">
+        <div class="cards-grid">
+            <div class="card">
+                <h3>🎉 SoloDevelopment Game Jam 6</h3>
+                <p>From <a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam">Winter Jam</a></p>
                 <ul>
-                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord Server</a></li>
-                    <li><a href="https://www.reddit.com/r/solodevelopment">Reddit</a></li>
-                    <li><a href="https://solodevelopment.itch.io">Itch.io</a></li>
+                    <li><a href="https://drahmen.itch.io/operation-mc-codename-melting-point">Operation MC: Codename Melting Point</a> by @drahmen</li>
                 </ul>
             </div>
-            <div class="footer-section">
-                <h4>Resources</h4>
+
+            <div class="card">
+                <h3>🎉 SoloDevelopment Game Jam 5</h3>
+                <p>From <a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam">Spooky Jam</a></p>
                 <ul>
-                    <li><a href="../events/">Game Jams</a></li>
-                    <li><a href="../hall-of-fame/">Hall of Fame</a></li>
-                    <li><a href="https://github.com/SoloDevelopmentCommunity/SoloDevelopment/wiki">Wiki</a></li>
+                    <li><a href="https://drahmen.itch.io/guardian-of-the-grave">Guardian of the Grave</a> by @drahmen</li>
+                    <li><a href="https://emceetheguy.itch.io/hanktheimp">Hank The Imp</a> by @Emcee</li>
+                    <li><a href="https://log64.itch.io/maybel-in-the-hazy-hotel">Maybel in the Hazy Hotel</a> by @log64</li>
                 </ul>
             </div>
-            <div class="footer-section">
-                <h4>About</h4>
+
+            <div class="card">
+                <h3>🎉 SoloDevelopment Game Jam 4</h3>
+                <p>From <a href="https://itch.io/jam/solo-dev-game-jam-4">Solodev Jam #4</a></p>
                 <ul>
-                    <li><a href="https://practicalnpc.itch.io/">Managed by PracticalNPC</a></li>
-                    <li><a href="https://github.com/SoloDevelopmentCommunity">GitHub</a></li>
+                    <li><a href="https://blackvoidmedia.itch.io/mutual-assured-destrtruction-simulator">Mutual Assured Destruction Simulator</a> by @blackvoidtytan</li>
+                    <li><a href="https://gripgrap.itch.io/dodge-the-question">Dodge the Question</a> by @gripgrap</li>
+                    <li><a href="https://yikag.itch.io/six-rolls-six">Six Rolls Six</a> by @yikag</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3>🏆 Third Marathon Jam</h3>
+                <p>From <a href="https://itch.io/jam/marathon-jam-3-by-solodevelopment">Marathon Jam 3</a></p>
+                <ul>
+                    <li><a href="https://blackvoidmedia.itch.io/out-here-alone">Out Here Alone</a> by @blackvoidtytan</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3>❄️ Winter Jam</h3>
+                <p>From <a href="https://itch.io/jam/winter-jam-by-solodevelopment">Winter Jam</a></p>
+                <ul>
+                    <li><a href="https://uppastgamer.itch.io/track-master">Track Master</a> by @ensom_</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3>🏆 Second Marathon Jam</h3>
+                <p>From <a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment">Marathon Jam 2</a></p>
+                <ul>
+                    <li><a href="https://fernandolv3.itch.io/scavengersfromplanetx">Scavengers from Planet X</a> by @fernandolv3</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3>🎃 Halloween Jam</h3>
+                <p>From <a href="https://itch.io/jam/halloween-jam-2021">Halloween Jam 2021</a></p>
+                <ul>
+                    <li><a href="https://blackvoidmedia.itch.io/i-came-home-tonight">I Came Home Tonight</a> by @blackvoidtytan and @radagast08</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3>🏆 First Marathon Jam</h3>
+                <p>From <a href="https://itch.io/jam/marathon-jam-by-solodevelopment">Marathon Jam 1</a></p>
+                <ul>
+                    <li><a href="https://razzie-dev.itch.io/df-fbla">DF FBLA</a> by @lonelylily</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3>🏆 First r/SoloDevelopment Jam</h3>
+                <p>From <a href="https://itch.io/jam/solodevelopment-game-jam">First Jam</a></p>
+                <ul>
+                    <li><a href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world">There's Something Wrong With This World</a> by @blackvoidtytan</li>
                 </ul>
             </div>
         </div>
-        <div class="copyright">
-            <p>© 2024 SoloDevelopment.org — Community-driven game development</p>
-        </div>
-    </footer>
-</body>
-</html>
+    </section>
+</main>
+
+{% include footer.html %}
