--- a/index.html
+++ b/index.html
@@ -40,33 +40,4 @@ description: A community for solo game developers
     </section>
 </main>
 
-<footer>
-    <div class="footer-content">
-        <div class="footer-section">
-            <h4>Community</h4>
-            <ul>
-                <li><a href="https://discord.gg/4R5bB9nMSV">Discord Server</a></li>
-                <li><a href="https://www.reddit.com/r/solodevelopment">Reddit</a></li>
-                <li><a href="https://solodevelopment.itch.io">Itch.io</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h4>Resources</h4>
-            <ul>
-                <li><a href="{{ site.baseurl }}/events/">Game Jams</a></li>
-                <li><a href="{{ site.baseurl }}/hall-of-fame/">Hall of Fame</a></li>
-                <li><a href="https://github.com/SoloDevelopmentCommunity/SoloDevelopment/wiki">Wiki</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h4>About</h4>
-            <ul>
-                <li><a href="https://practicalnpc.itch.io/">Managed by PracticalNPC</a></li>
-                <li><a href="https://github.com/SoloDevelopmentCommunity">GitHub</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="copyright">
-        <p>© 2024 SoloDevelopment.org — Community-driven game development</p>
-    </div>
-</footer>
+{% include footer.html %}
