--- a/events/index.html
+++ b/events/index.html
@@ -1,105 +1,53 @@
 ---
 layout: default
 title: Events
+description: Game jams and events for solo developers
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Game jams and events for solo developers">
-    <title>Events - SoloDevelopment</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-    <header>
-        <div class="header-content">
-            <h1 class="site-title">SoloDevelopment.org</h1>
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/events/">Events</a></li>
-                    <li><a href="/hall-of-fame/">Hall of Fame</a></li>
-                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
-                </ul>
-            </nav>
+{% include header.html %}
+
+<main>
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Current Jam</h2>
+            <p>Jump into our latest game development challenge:</p>
+            <div class="button-group">
+                <a href="https://itch.io/jam/solodev-marathon-jam-4" class="button">Join Marathon Jam #4</a>
+            </div>
         </div>
-    </header>
+    </section>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>Current Jam</h2>
-                <p>Jump into our latest game development challenge:</p>
-                <div class="button-group">
-                    <a href="https://itch.io/jam/solodev-marathon-jam-4" class="button">Join Marathon Jam #4</a>
-                </div>
+    <section class="features">
+        <div class="cards-grid">
+            <div class="card">
+                <h3>About Our Jams</h3>
+                <p>Welcome to SoloDevelopment, a community built by solo developers for solo developers! We provide a space where indie devs can connect, share experiences, and support each other.</p>
+                <p>We regularly host game jams and encourage developers of all skill levels to participate. Whether you're looking to get feedback or just learn from others, this is the place for you!</p>
             </div>
-        </section>
 
-        <section class="features">
-            <div class="cards-grid">
-                <div class="card">
-                    <h3>About Our Jams</h3>
-                    <p>Welcome to SoloDevelopment, a community built by solo developers for solo developers! We provide a space where indie devs can connect, share experiences, and support each other.</p>
-                    <p>We regularly host game jams and encourage developers of all skill levels to participate. Whether you're looking to get feedback or just learn from others, this is the place for you!</p>
-                </div>
-
-                <div class="card">
-                    <h3>Marathon Jams</h3>
-                    <p>Take on the challenge of our month-long development marathons:</p>
-                    <ul>
-                        <li><a href="https://itch.io/jam/marathon-jam-by-solodevelopment">Marathon Jam 1</a></li>
-                        <li><a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment">Marathon Jam 2</a></li>
-                        <li><a href="https://itch.io/jam/marathon-jam-3-by-solodevelopment">Marathon Jam 3</a></li>
-                    </ul>
-                </div>
-
-                <div class="card">
-                    <h3>72-hour Jams</h3>
-                    <p>Perfect for weekend warriors and rapid prototyping:</p>
-                    <ul>
-                        <li><a href="https://itch.io/jam/winter-jam-by-solodevelopment">Winter Jam</a></li>
-                        <li><a href="https://itch.io/jam/solodevelopment-game-jam">Minimalism Jam</a></li>
-                        <li><a href="https://itch.io/jam/halloween-jam-2021">Halloween Jam 2021</a></li>
-                        <li><a href="https://itch.io/jam/solo-dev-game-jam-4">Solodev Jam #4</a></li>
-                        <li><a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam">Solodev Jam #5</a></li>
-                        <li><a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam">Solodev Jam #6</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h4>Community</h4>
+            <div class="card">
+                <h3>Marathon Jams</h3>
+                <p>Take on the challenge of our month-long development marathons:</p>
                 <ul>
-                    <li><a href="https://discord.gg/4R5bB9nMSV">Discord Server</a></li>
-                    <li><a href="https://www.reddit.com/r/solodevelopment">Reddit</a></li>
-                    <li><a href="https://solodevelopment.itch.io">Itch.io</a></li>
+                    <li><a href="https://itch.io/jam/marathon-jam-by-solodevelopment">Marathon Jam 1</a></li>
+                    <li><a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment">Marathon Jam 2</a></li>
+                    <li><a href="https://itch.io/jam/marathon-jam-3-by-solodevelopment">Marathon Jam 3</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
-                <h4>Resources</h4>
+
+            <div class="card">
+                <h3>72-hour Jams</h3>
+                <p>Perfect for weekend warriors and rapid prototyping:</p>
                 <ul>
-                    <li><a href="../events/">Game Jams</a></li>
-                    <li><a href="../hall-of-fame/">Hall of Fame</a></li>
-                    <li><a href="https://github.com/SoloDevelopmentCommunity/SoloDevelopment/wiki">Wiki</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>About</h4>
-                <ul>
-                    <li><a href="https://practicalnpc.itch.io/">Managed by PracticalNPC</a></li>
-                    <li><a href="https://github.com/SoloDevelopmentCommunity">GitHub</a></li>
+                    <li><a href="https://itch.io/jam/winter-jam-by-solodevelopment">Winter Jam</a></li>
+                    <li><a href="https://itch.io/jam/solodevelopment-game-jam">Minimalism Jam</a></li>
+                    <li><a href="https://itch.io/jam/halloween-jam-2021">Halloween Jam 2021</a></li>
+                    <li><a href="https://itch.io/jam/solo-dev-game-jam-4">Solodev Jam #4</a></li>
+                    <li><a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam">Solodev Jam #5</a></li>
+                    <li><a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam">Solodev Jam #6</a></li>
                 </ul>
             </div>
         </div>
-        <div class="copyright">
-            <p>© 2024 SoloDevelopment.org — Community-driven game development</p>
-        </div>
-    </footer>
-</body>
-</html>
+    </section>
+</main>
+
+{% include footer.html %}
