updated hall of fame

--- a/hall-of-fame/index.html
+++ b/hall-of-fame/index.html
@@ -15,6 +15,16 @@ description: Celebrating outstanding solo developer projects
     <section class="features">
         <div class="cards-grid">
             <div class="card">
+                <h3>🏆 SoloDevelopment Marathon Jam 4</h3>
+                <p>From <a href="https://itch.io/jam/solodev-marathon-jam-4">Marathon Jam 4</a></p>
+                <ul>
+                    <li><a href="https://proyd.itch.io/hack-the-loop">Hack the Loop</a> by @ProYd</li>
+                    <li><a href="https://neatgames.itch.io/yestersol">YesterSol</a> by @NeatGames</li>
+                    <li><a href="https://loubagel.itch.io/daves-coffee">Survive The Day: Dave's Coffee</a> by @Lou Bagel</li>
+                </ul>
+            </div>
+
+            <div class="card">
                 <h3>🎉 SoloDevelopment Game Jam 6</h3>
                 <p>From <a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam">Winter Jam</a></p>
                 <ul>
