--- a/hall-of-fame/index.html
+++ b/hall-of-fame/index.html
@@ -16,87 +16,87 @@ description: Celebrating outstanding solo developer projects
         <div class="cards-grid">
             <div class="card">
                 <h3>🏆 SoloDevelopment Marathon Jam 4</h3>
-                <p>From <a href="https://itch.io/jam/solodev-marathon-jam-4">Marathon Jam 4</a></p>
+                <p>From <a href="https://itch.io/jam/solodev-marathon-jam-4" target="_blank">Marathon Jam 4</a></p>
                 <ul>
-                    <li><a href="https://proyd.itch.io/hack-the-loop">Hack the Loop</a> by @ProYd</li>
-                    <li><a href="https://neatgames.itch.io/yestersol">YesterSol</a> by @NeatGames</li>
-                    <li><a href="https://loubagel.itch.io/daves-coffee">Survive The Day: Dave's Coffee</a> by @Lou Bagel</li>
+                    <li><a href="https://proyd.itch.io/hack-the-loop" target="_blank">Hack the Loop</a> by @ProYd</li>
+                    <li><a href="https://neatgames.itch.io/yestersol" target="_blank">YesterSol</a> by @NeatGames</li>
+                    <li><a href="https://loubagel.itch.io/daves-coffee" target="_blank">Survive The Day: Dave's Coffee</a> by @Lou Bagel</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>🎉 SoloDevelopment Game Jam 6</h3>
-                <p>From <a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam">Winter Jam</a></p>
+                <p>From <a href="https://itch.io/jam/solodevelopment-jam-6-winter-jam" target="_blank">Winter Jam</a></p>
                 <ul>
-                    <li><a href="https://drahmen.itch.io/operation-mc-codename-melting-point">Operation MC: Codename Melting Point</a> by @drahmen</li>
+                    <li><a href="https://drahmen.itch.io/operation-mc-codename-melting-point" target="_blank">Operation MC: Codename Melting Point</a> by @drahmen</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>🎉 SoloDevelopment Game Jam 5</h3>
-                <p>From <a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam">Spooky Jam</a></p>
+                <p>From <a href="https://itch.io/jam/solo-dev-game-jam-5-spooky-jam" target="_blank">Spooky Jam</a></p>
                 <ul>
-                    <li><a href="https://drahmen.itch.io/guardian-of-the-grave">Guardian of the Grave</a> by @drahmen</li>
-                    <li><a href="https://emceetheguy.itch.io/hanktheimp">Hank The Imp</a> by @Emcee</li>
-                    <li><a href="https://log64.itch.io/maybel-in-the-hazy-hotel">Maybel in the Hazy Hotel</a> by @log64</li>
+                    <li><a href="https://drahmen.itch.io/guardian-of-the-grave" target="_blank">Guardian of the Grave</a> by @drahmen</li>
+                    <li><a href="https://emceetheguy.itch.io/hanktheimp" target="_blank">Hank The Imp</a> by @Emcee</li>
+                    <li><a href="https://log64.itch.io/maybel-in-the-hazy-hotel" target="_blank">Maybel in the Hazy Hotel</a> by @log64</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>🎉 SoloDevelopment Game Jam 4</h3>
-                <p>From <a href="https://itch.io/jam/solo-dev-game-jam-4">Solodev Jam #4</a></p>
+                <p>From <a href="https://itch.io/jam/solo-dev-game-jam-4" target="_blank">Solodev Jam #4</a></p>
                 <ul>
-                    <li><a href="https://blackvoidmedia.itch.io/mutual-assured-destrtruction-simulator">Mutual Assured Destruction Simulator</a> by @blackvoidtytan</li>
-                    <li><a href="https://gripgrap.itch.io/dodge-the-question">Dodge the Question</a> by @gripgrap</li>
-                    <li><a href="https://yikag.itch.io/six-rolls-six">Six Rolls Six</a> by @yikag</li>
+                    <li><a href="https://blackvoidmedia.itch.io/mutual-assured-destrtruction-simulator" target="_blank">Mutual Assured Destruction Simulator</a> by @blackvoidtytan</li>
+                    <li><a href="https://gripgrap.itch.io/dodge-the-question" target="_blank">Dodge the Question</a> by @gripgrap</li>
+                    <li><a href="https://yikag.itch.io/six-rolls-six" target="_blank">Six Rolls Six</a> by @yikag</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>🏆 Third Marathon Jam</h3>
-                <p>From <a href="https://itch.io/jam/marathon-jam-3-by-solodevelopment">Marathon Jam 3</a></p>
+                <p>From <a href="https://itch.io/jam/marathon-jam-3-by-solodevelopment" target="_blank">Marathon Jam 3</a></p>
                 <ul>
-                    <li><a href="https://blackvoidmedia.itch.io/out-here-alone">Out Here Alone</a> by @blackvoidtytan</li>
+                    <li><a href="https://blackvoidmedia.itch.io/out-here-alone" target="_blank">Out Here Alone</a> by @blackvoidtytan</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>❄️ Winter Jam</h3>
-                <p>From <a href="https://itch.io/jam/winter-jam-by-solodevelopment">Winter Jam</a></p>
+                <p>From <a href="https://itch.io/jam/winter-jam-by-solodevelopment" target="_blank">Winter Jam</a></p>
                 <ul>
-                    <li><a href="https://uppastgamer.itch.io/track-master">Track Master</a> by @ensom_</li>
+                    <li><a href="https://uppastgamer.itch.io/track-master" target="_blank">Track Master</a> by @ensom_</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>🏆 Second Marathon Jam</h3>
-                <p>From <a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment">Marathon Jam 2</a></p>
+                <p>From <a href="https://itch.io/jam/marathon-jam-2022-by-solodevelopment" target="_blank">Marathon Jam 2</a></p>
                 <ul>
-                    <li><a href="https://fernandolv3.itch.io/scavengersfromplanetx">Scavengers from Planet X</a> by @fernandolv3</li>
+                    <li><a href="https://fernandolv3.itch.io/scavengersfromplanetx" target="_blank">Scavengers from Planet X</a> by @fernandolv3</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>🎃 Halloween Jam</h3>
-                <p>From <a href="https://itch.io/jam/halloween-jam-2021">Halloween Jam 2021</a></p>
+                <p>From <a href="https://itch.io/jam/halloween-jam-2021" target="_blank">Halloween Jam 2021</a></p>
                 <ul>
-                    <li><a href="https://blackvoidmedia.itch.io/i-came-home-tonight">I Came Home Tonight</a> by @blackvoidtytan and @radagast08</li>
+                    <li><a href="https://blackvoidmedia.itch.io/i-came-home-tonight" target="_blank">I Came Home Tonight</a> by @blackvoidtytan and @radagast08</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>🏆 First Marathon Jam</h3>
-                <p>From <a href="https://itch.io/jam/marathon-jam-by-solodevelopment">Marathon Jam 1</a></p>
+                <p>From <a href="https://itch.io/jam/marathon-jam-by-solodevelopment" target="_blank">Marathon Jam 1</a></p>
                 <ul>
-                    <li><a href="https://razzie-dev.itch.io/df-fbla">DF FBLA</a> by @lonelylily</li>
+                    <li><a href="https://razzie-dev.itch.io/df-fbla" target="_blank">DF FBLA</a> by @lonelylily</li>
                 </ul>
             </div>
 
             <div class="card">
                 <h3>🏆 First r/SoloDevelopment Jam</h3>
-                <p>From <a href="https://itch.io/jam/solodevelopment-game-jam">First Jam</a></p>
+                <p>From <a href="https://itch.io/jam/solodevelopment-game-jam" target="_blank">First Jam</a></p>
                 <ul>
-                    <li><a href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world">There's Something Wrong With This World</a> by @blackvoidtytan</li>
+                    <li><a href="https://blackvoidmedia.itch.io/theres-something-wrong-with-this-world" target="_blank">There's Something Wrong With This World</a> by @blackvoidtytan</li>
                 </ul>
             </div>
         </div>
