--- a/hall-of-fame/index.html
+++ b/hall-of-fame/index.html
@@ -8,7 +8,7 @@ description: Celebrating outstanding solo developer projects
     <section class="hero">
         <div class="hero-content">
             <h2>🏅 Hall of Fame 🏅</h2>
-            <p>Celebrating the amazing solo developers who have showcased their talent in our game jams!</p>
+            <p>The amazing games made during our community jams</p>
         </div>
     </section>
 
